Add template migration command to Makefile and update README with new migration instructions. Enhance Azure model configurations in llm_azure_config.toml with new GPT-5 variants and updated max output tokens for existing models.

--- a/stackend/llm_models_by_providers/llm_azure_config.toml
+++ b/stackend/llm_models_by_providers/llm_azure_config.toml
@@ -4,10 +4,59 @@ docs_url_slug = "azure-openai"
 hosted_by = "Stack AI"
 display_order = 11
 
+[llms.providers.Azure."gpt-5-2025-08-07"]
+model_name = "GPT-5"
+description = "GPT-5 is a large reasoning model, providing high intelligence at the same cost and latency targets."
+context_window = 400000
+max_output_tokens = 128000
+rating_reasoning = 3
+rating_speed = 1
+rating_context = 3
+date = "August 7, 2025"
+warning = "Latest and Smartest"
+has_json_format = true
+has_json_schema = true
+has_vision = true
+supported_media_types = ["image/jpeg", "image/png", "image/webp", "image/gif"]
+has_function_calling = true
+
+[llms.providers.Azure."gpt-5-mini-2025-08-07"]
+model_name = "GPT-5 mini"
+description = "GPT-5 mini is a small reasoning model, providing high intelligence at the same cost and latency targets."
+context_window = 400000
+max_output_tokens = 128000
+rating_reasoning = 2
+rating_speed = 3
+rating_context = 3
+date = "August 7, 2025"
+warning = "Latest and Faster"
+has_json_format = true
+has_json_schema = true
+has_vision = true
+supported_media_types = ["image/jpeg", "image/png", "image/webp", "image/gif"]
+has_function_calling = true
+
+[llms.providers.Azure."gpt-5-nano-2025-08-07"]
+model_name = "GPT-5 nano"
+description = "GPT-5 nano is the fastest version of GPT-5. Great for summarization and classification tasks."
+context_window = 400000
+max_output_tokens = 128000
+rating_reasoning = 2
+rating_speed = 3
+rating_context = 2
+date = "August 7, 2025"
+warning = "Latest and Fastest"
+has_json_format = true
+has_json_schema = true
+has_vision = true
+supported_media_types = ["image/jpeg", "image/png", "image/webp", "image/gif"]
+has_function_calling = true
+
 [llms.providers.Azure."gpt-4.1"]
 model_name = "GPT 4.1"
 description = "The latest version of GPT-4.1, with improved reasoning and function calling capabilities."
 context_window = 200000
+max_output_tokens = 32768
 rating_reasoning = 3
 rating_speed = 2
 rating_context = 3
@@ -23,6 +72,7 @@ has_function_calling = true
 model_name = "o4 Mini"
 description = "o4-mini is a small reasoning model, providing high intelligence at the same cost and latency targets of o1-mini."
 context_window = 200000
+max_output_tokens = 100000
 rating_reasoning = 3
 rating_speed = 2
 rating_context = 3
@@ -38,6 +88,7 @@ has_function_calling = true
 model_name = "o3 Mini"
 description = "o3-mini is a small reasoning model, providing high intelligence at the same cost and latency targets of o1-mini."
 context_window = 200000
+max_output_tokens = 100000
 rating_reasoning = 3
 rating_speed = 2
 rating_context = 3
@@ -52,6 +103,7 @@ has_function_calling = true
 model_name = "o1 Mini"
 description = "Optimized for STEM reasoning, especially math and coding. Performs comparably to the larger o1 model on AIME and Codeforces, but runs 80% faster. Ideal for STEM applications, less effective for non-STEM tasks."
 context_window = 128000
+max_output_tokens = 65536
 rating_reasoning = 3
 rating_speed = 2
 rating_context = 2
@@ -66,6 +118,7 @@ has_function_calling = true
 model_name = "GPT-4o Mini"
 description = "Light-weight version of GPT 4o. Enables a broad range of tasks with its low cost and latency (perfect for everyday tasks). Supports vision and surpasses GPT-3.5 Turbo performance."
 context_window = 128000
+max_output_tokens = 16384
 training_data = "Up to October 2023"
 rating_reasoning = 3
 rating_speed = 3
@@ -82,6 +135,7 @@ has_function_calling = true
 model_name = "GPT-4o"
 description = "Flagship model from OpenAI's GPT-4 series, best for complex tasks. Supports vision & structured outputs."
 context_window = 128000
+max_output_tokens = 4096
 training_data = "Up to October 2023"
 rating_reasoning = 3
 rating_speed = 3
@@ -98,6 +152,7 @@ has_function_calling = true
 model_name = "GPT-4 Turbo"
 description = "GPT-4 model with improved instruction following, JSON mode, reproducible outputs, parallel function calling, and more. Returns a maximum of 4,096 output tokens."
 context_window = 128000
+max_output_tokens = 4096
 training_data = "Up to Dec 2023"
 rating_reasoning = 3
 rating_speed = 2
@@ -110,4 +165,4 @@ supported_media_types = ["image/jpeg", "image/png", "image/webp", "image/gif"]
 has_function_calling = true
 
 [llms.providers.Azure.default] 
-model_id = "gpt-4o-mini"
+model_id = "gpt-4o"
