feat: implement SOPS encryption with hierarchical AGE key management
      - Set up three-tier encryption hierarchy:
        - Master key (local only) for ultimate access
        - GitHub repo key (encrypted) for CI/CD operations
        - Cluster-specific keys for runtime decryption

      - Encrypted sensitive secrets with SOPS:
        - ACR credentials and stackend license encrypted with all three keys
        - Cluster keys encrypted with master + GitHub keys
        - Added .sops.yaml configuration for automatic encryption rules

      - Integrated SOPS with Terraform deployment:
        - Added environment validation for SOPS_AGE_KEY_FILE and GITHUB_TOKEN
        - Created secure provisioner to apply SOPS secret after cluster creation
        - Implemented security measures to prevent secret leakage in logs

      - Updated Flux configuration:
        - Added SOPS decryption provider to configuration-setup Kustomization
        - Bootstrap secret applied manually (not managed by Flux)

      This provides GitOps-friendly secret management with proper access control
      and separation of concerns between different environments and CI/CD systems.

--- a/clusters/aks/configuration-setup.yaml
+++ b/clusters/aks/configuration-setup.yaml
@@ -14,6 +14,10 @@ spec:
     substituteFrom:
       - kind: ConfigMap
         name: terraform-outputs
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
   dependsOn:
     - name: flux-system
     - name: crds
