--- a/components/kustomizations/configuration-setup/VERSION/base/stackend--env-configmap.yaml
+++ b/components/kustomizations/configuration-setup/VERSION/base/stackend--env-configmap.yaml
@@ -102,6 +102,7 @@ data:
   SERVICENOW_CLIENT_ID: ""
   SERVICENOW_CLIENT_SECRET: ""
   STACKEND_API_URL: http://4.255.32.138/
+  STACKEND_US_EAST_API_URL: ""
   STACKWEB_URL: http://4.255.32.138/
   STRIPE_SECRET_KEY: '?'
   STRIPE_WEBHOOK_SECRET: ""
