Update Docker images to version v1.0.0 and add NODE_TLS_REJECT_UNAUTHORIZED environment variable in stackweb service

--- a/stackweb/Dockerfile
+++ b/stackweb/Dockerfile
@@ -1,4 +1,4 @@
-FROM stackai.azurecr.io/stackai/stackweb:latest
+FROM stackai.azurecr.io/stackai/stackweb:v1.0.0
 
 ARG GOOGLE_CLIENT_EMAIL
 ARG GOOGLE_SERVICE_PRIVATE_KEY
