--- a/stackrepl/docker-compose.yml
+++ b/stackrepl/docker-compose.yml
@@ -2,6 +2,6 @@ services:
   stackrepl:
     container_name: stackrepl
     restart: always
-    image: stackai.azurecr.io/stackai/stackrepl/stack-repl:latest
+    image: stackai.azurecr.io/stackai/stackrepl/stack-repl:v1.0.0
     extra_hosts:
       - "host.docker.internal:host-gateway"
