--- a/stackweb/docker-compose.yml
+++ b/stackweb/docker-compose.yml
@@ -55,5 +55,7 @@ services:
 
     env_file:
       - .env
+    environment:
+      - NODE_TLS_REJECT_UNAUTHORIZED=0
     ports:
       - "3000:3000"
