feat: add environment variable update functionality

--- a/scripts/environment_variables/templates/stackend.env.template
+++ b/scripts/environment_variables/templates/stackend.env.template
@@ -125,6 +125,7 @@ REDIS_URL={{REDIS_URL | default("redis://redis:6379")}}
 # ENVIRONMENT CONFIGURATION (LEAVE AS IS)
 ENVIRONMENT={{ENVIRONMENT | default("production")}}
 DEPLOYMENT_ENVIRONMENT={{DEPLOYMENT_ENVIRONMENT | default("production_stackend")}}
+ON_PREMISE={{ON_PREMISE | default("true")}}
 
 # VARIABLE: Allow Parallel Flow Execution
 # DESCRIPTION: Whether the flow in the workflow builder is executed in parallel or sequentially.
