--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,38 +1,27 @@
 #–– define a reusable "https" snippet with your cert+key
-# (https) {
-#     tls /etc/caddy/certificates/iteng.nu.chained.crt \
-#         /etc/caddy/certificates/private.key
+// (https) {
+//     tls /etc/caddy/certificates/iteng.nu.chained.crt \
+//         /etc/caddy/certificates/private.key
 
-#     header {
-#         Content-Security-Policy "upgrade-insecure-requests"
-#     }
-# }
+//     header {
+//         Content-Security-Policy "upgrade-insecure-requests"
+//     }
+// }
 
-# #–– supabase API
-# db.stackai.onprem.com {
-#     import https
+// #–– supabase API
+// db.stackai.onprem.com {
+//     import https
+//     reverse_proxy /* kong:3000
+// }
 
-#     reverse_proxy /rest/v1/*    kong:8000
-#     reverse_proxy /graphql/v1/* kong:8000
-#     reverse_proxy /auth/v1/*    kong:8000
-#     reverse_proxy /realtime/v1/* kong:8000
-#     reverse_proxy /storage/v1/*  kong:8000
-#     reverse_proxy /functions/v1/* kong:8000
-#     reverse_proxy /analytics/v1/* kong:8000
-#     reverse_proxy /* studio:3000
-#     reverse_proxy /sso/* kong:8000
-# }
+// #–– your front-end
+// stackai.onprem.com {
+//     import https
+//     reverse_proxy /* stackweb:3000
+// }
 
-# #–– your front-end
-# stackai.onprem.com {
-#     import https
-
-#     reverse_proxy /* stackweb:3000
-# }
-
-# #–– your API backend
-# api.stackai.onprem.com {
-#     import https
-
-#     reverse_proxy /* stackend:8000
-# }
+// #–– your API backend
+// api.stackai.onprem.com {
+//     import https
+//     reverse_proxy /* stackend:8000
+// }
