--- a/supabase/volumes/api/kong.yml
+++ b/supabase/volumes/api/kong.yml
@@ -1,4 +1,4 @@
-_format_version: '2.1'
+_format_version: "2.1"
 _transform: true
 
 ###
@@ -63,9 +63,31 @@ services:
     plugins:
       - name: cors
 
+  ## Open SSO routes
+  - name: auth-v1-open-sso-acs
+    url: "http://auth:9999/sso/saml/acs"
+    routes:
+      - name: auth-v1-open-sso-acs
+        strip_path: true
+        paths:
+          - /auth/v1/sso/saml/acs
+          - /sso/saml/acs
+    plugins:
+      - name: cors
+  - name: auth-v1-open-sso-metadata
+    url: "http://auth:9999/sso/saml/metadata"
+    routes:
+      - name: auth-v1-open-sso-metadata
+        strip_path: true
+        paths:
+          - /auth/v1/sso/saml/metadata
+          - /sso/saml/metadata
+    plugins:
+      - name: cors
+
   ## Secure Auth routes
   - name: auth-v1
-    _comment: 'GoTrue: /auth/v1/* -> http://auth:9999/*'
+    _comment: "GoTrue: /auth/v1/* -> http://auth:9999/*"
     url: http://auth:9999/
     routes:
       - name: auth-v1-all
@@ -86,7 +108,7 @@ services:
 
   ## Secure REST routes
   - name: rest-v1
-    _comment: 'PostgREST: /rest/v1/* -> http://rest:3000/*'
+    _comment: "PostgREST: /rest/v1/* -> http://rest:3000/*"
     url: http://rest:3000/
     routes:
       - name: rest-v1-all
@@ -107,7 +129,7 @@ services:
 
   ## Secure GraphQL routes
   - name: graphql-v1
-    _comment: 'PostgREST: /graphql/v1/* -> http://rest:3000/rpc/graphql'
+    _comment: "PostgREST: /graphql/v1/* -> http://rest:3000/rpc/graphql"
     url: http://rest:3000/rpc/graphql
     routes:
       - name: graphql-v1-all
@@ -133,7 +155,7 @@ services:
 
   ## Secure Realtime routes
   - name: realtime-v1-ws
-    _comment: 'Realtime: /realtime/v1/* -> ws://realtime:4000/socket/*'
+    _comment: "Realtime: /realtime/v1/* -> ws://realtime:4000/socket/*"
     url: http://realtime-dev.supabase-realtime:4000/socket
     protocol: ws
     routes:
@@ -153,7 +175,7 @@ services:
             - admin
             - anon
   - name: realtime-v1-rest
-    _comment: 'Realtime: /realtime/v1/* -> ws://realtime:4000/socket/*'
+    _comment: "Realtime: /realtime/v1/* -> ws://realtime:4000/socket/*"
     url: http://realtime-dev.supabase-realtime:4000/api
     protocol: http
     routes:
@@ -174,7 +196,7 @@ services:
             - anon
   ## Storage routes: the storage server manages its own auth
   - name: storage-v1
-    _comment: 'Storage: /storage/v1/* -> http://storage:5000/*'
+    _comment: "Storage: /storage/v1/* -> http://storage:5000/*"
     url: http://storage:5000/
     routes:
       - name: storage-v1-all
@@ -186,7 +208,7 @@ services:
 
   ## Edge Functions routes
   - name: functions-v1
-    _comment: 'Edge Functions: /functions/v1/* -> http://functions:9000/*'
+    _comment: "Edge Functions: /functions/v1/* -> http://functions:9000/*"
     url: http://functions:9000/
     routes:
       - name: functions-v1-all
@@ -198,7 +220,7 @@ services:
 
   ## Analytics routes
   - name: analytics-v1
-    _comment: 'Analytics: /analytics/v1/* -> http://logflare:4000/*'
+    _comment: "Analytics: /analytics/v1/* -> http://logflare:4000/*"
     url: http://analytics:4000/
     routes:
       - name: analytics-v1-all
@@ -208,7 +230,7 @@ services:
 
   ## Secure Database routes
   - name: meta
-    _comment: 'pg-meta: /pg/* -> http://pg-meta:8080/*'
+    _comment: "pg-meta: /pg/* -> http://pg-meta:8080/*"
     url: http://meta:8080/
     routes:
       - name: meta-all
@@ -227,7 +249,7 @@ services:
 
   ## Protected Dashboard - catch all remaining routes
   - name: dashboard
-    _comment: 'Studio: /* -> http://studio:3000/*'
+    _comment: "Studio: /* -> http://studio:3000/*"
     url: http://studio:3000/
     routes:
       - name: dashboard-all
